@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = test
+parts = test omelette
 versions = versions
 
 [versions]
@@ -16,3 +16,8 @@ zc.buildout = 1.3.0
 recipe = zc.recipe.testrunner
 eggs = collective.recipe.i18noverrides [tests]
 
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${test:eggs}
+products = 
+packages = ./
