@@ -4,6 +4,9 @@ History of collective.recipe.i18noverrides
 0.2 (unreleased)
 ----------------
 
+- Specify a package where the source directory can be found
+  [gotcha]
+
 - Pin packages (at least zc.buildout) in both the main buildout.cfg
   and the one in the tests, to avoid test failures simply because the
   used zc.buildout is upgraded during the test run.
